--- a/workflow/notebooks/optimal_elev.ipynb
+++ b/workflow/notebooks/optimal_elev.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "cd01cab0-e55e-4fe4-aa81-88afbb80a320",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:46.183878Z",
-     "iopub.status.busy": "2024-02-29T23:11:46.182881Z",
-     "iopub.status.idle": "2024-02-29T23:11:46.223460Z",
-     "shell.execute_reply": "2024-02-29T23:11:46.222329Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:46.183825Z"
+     "iopub.execute_input": "2024-03-12T19:38:03.946849Z",
+     "iopub.status.busy": "2024-03-12T19:38:03.946317Z",
+     "iopub.status.idle": "2024-03-12T19:38:03.987053Z",
+     "shell.execute_reply": "2024-03-12T19:38:03.985648Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:03.946801Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "a6922fd9-d241-449c-a0c2-297b4cf56827",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:46.348679Z",
-     "iopub.status.busy": "2024-02-29T23:11:46.347346Z",
-     "iopub.status.idle": "2024-02-29T23:11:48.027354Z",
-     "shell.execute_reply": "2024-02-29T23:11:48.026336Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:46.348628Z"
+     "iopub.execute_input": "2024-03-12T19:38:04.114528Z",
+     "iopub.status.busy": "2024-03-12T19:38:04.114013Z",
+     "iopub.status.idle": "2024-03-12T19:38:04.151510Z",
+     "shell.execute_reply": "2024-03-12T19:38:04.149837Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:04.114484Z"
     }
    },
    "outputs": [],
@@ -49,15 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "15c48690-c6db-4531-b975-4c0f77a2c578",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:48.030156Z",
-     "iopub.status.busy": "2024-02-29T23:11:48.029738Z",
-     "iopub.status.idle": "2024-02-29T23:11:48.045926Z",
-     "shell.execute_reply": "2024-02-29T23:11:48.044927Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:48.030135Z"
+     "iopub.execute_input": "2024-03-12T19:38:04.294944Z",
+     "iopub.status.busy": "2024-03-12T19:38:04.294454Z",
+     "iopub.status.idle": "2024-03-12T19:38:04.330111Z",
+     "shell.execute_reply": "2024-03-12T19:38:04.328439Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:04.294900Z"
     }
    },
    "outputs": [],
@@ -80,15 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "90042fbe-f2e4-4c34-bc71-c156fab78c1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:48.046658Z",
-     "iopub.status.busy": "2024-02-29T23:11:48.046481Z",
-     "iopub.status.idle": "2024-02-29T23:11:48.109380Z",
-     "shell.execute_reply": "2024-02-29T23:11:48.107949Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:48.046640Z"
+     "iopub.execute_input": "2024-03-12T19:38:04.513567Z",
+     "iopub.status.busy": "2024-03-12T19:38:04.513071Z",
+     "iopub.status.idle": "2024-03-12T19:38:04.548821Z",
+     "shell.execute_reply": "2024-03-12T19:38:04.547130Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:04.513520Z"
     }
    },
    "outputs": [],
@@ -109,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "73e91616-ed1b-4ffc-b21a-a01991161cbb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:48.182719Z",
-     "iopub.status.busy": "2024-02-29T23:11:48.182217Z",
-     "iopub.status.idle": "2024-02-29T23:11:51.745093Z",
-     "shell.execute_reply": "2024-02-29T23:11:51.743843Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:48.182670Z"
+     "iopub.execute_input": "2024-03-12T19:38:05.145610Z",
+     "iopub.status.busy": "2024-03-12T19:38:05.145098Z",
+     "iopub.status.idle": "2024-03-12T19:38:05.705414Z",
+     "shell.execute_reply": "2024-03-12T19:38:05.704487Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:05.145564Z"
     }
    },
    "outputs": [
@@ -125,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load data: Upper\n"
+      "Load data: Mid\n"
      ]
     }
    ],
@@ -172,15 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "8dc27e55-cadc-4fc3-9c17-6ca1ccc267fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:51.853276Z",
-     "iopub.status.busy": "2024-02-29T23:11:51.852814Z",
-     "iopub.status.idle": "2024-02-29T23:11:52.595522Z",
-     "shell.execute_reply": "2024-02-29T23:11:52.594645Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:51.853239Z"
+     "iopub.execute_input": "2024-03-12T19:38:05.707424Z",
+     "iopub.status.busy": "2024-03-12T19:38:05.707055Z",
+     "iopub.status.idle": "2024-03-12T19:38:06.245673Z",
+     "shell.execute_reply": "2024-03-12T19:38:06.244547Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:05.707388Z"
     }
    },
    "outputs": [],
@@ -221,20 +230,20 @@
     "# using the shape parameter, and multiply these draws from\n",
     "# the scale parameter\n",
     "rng = np.random.default_rng()\n",
-    "lifetime = rng.weibull(W_SHAPE, N_SOW)*W_SCALE"
+    "lifetime = np.round(rng.weibull(W_SHAPE, N_SOW)*W_SCALE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "f1f8874e-27d5-48d8-9389-e1d7ae36e506",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:52.596383Z",
-     "iopub.status.busy": "2024-02-29T23:11:52.596249Z",
-     "iopub.status.idle": "2024-02-29T23:11:53.261884Z",
-     "shell.execute_reply": "2024-02-29T23:11:53.261164Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:52.596369Z"
+     "iopub.execute_input": "2024-03-12T19:38:07.017717Z",
+     "iopub.status.busy": "2024-03-12T19:38:07.017512Z",
+     "iopub.status.idle": "2024-03-12T19:38:07.482042Z",
+     "shell.execute_reply": "2024-03-12T19:38:07.480487Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:07.017700Z"
     }
    },
    "outputs": [],
@@ -317,15 +326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "17053fb2-3b3d-456b-926f-b3b62ce2cb39",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:53.263041Z",
-     "iopub.status.busy": "2024-02-29T23:11:53.262806Z",
-     "iopub.status.idle": "2024-02-29T23:11:53.420576Z",
-     "shell.execute_reply": "2024-02-29T23:11:53.420035Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:53.263028Z"
+     "iopub.execute_input": "2024-03-12T19:38:07.483820Z",
+     "iopub.status.busy": "2024-03-12T19:38:07.483488Z",
+     "iopub.status.idle": "2024-03-12T19:38:07.685491Z",
+     "shell.execute_reply": "2024-03-12T19:38:07.684345Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:07.483787Z"
     }
    },
    "outputs": [],
@@ -365,12 +374,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "5fac44fd-6807-4081-b9b1-c1dcfbdaebbb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-12T19:38:08.376106Z",
+     "iopub.status.busy": "2024-03-12T19:38:08.375816Z",
+     "iopub.status.idle": "2024-03-12T19:38:09.019379Z",
+     "shell.execute_reply": "2024-03-12T19:38:09.018346Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:08.376081Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lifetime_temp = lifetime[0:3]\n",
+    "ens_df = ens_dfs['Mid']\n",
+    "ens_df['fnd_type'] = np.where(ens_df['found_type'] == 'S',\n",
+    "                                  'S', \n",
+    "                                  'B')\n",
+    "\n",
+    "# We're going to make a lifetime_mask and dr_matrix \n",
+    "# to calculate present values of potential heightenings - the avoided\n",
+    "# losses as well as the residual risk\n",
+    "# Prepare lifetime mask and matrix for discount factors\n",
+    "\n",
+    "# discount factor matrix\n",
+    "dr_matrix = np.tile(dr_factors, (1, len(ens_df['fd_id'].unique())))\n",
+    "\n",
+    "# Use the lifetime series to create a mask\n",
+    "# Can adapt this code\n",
+    "# https://stackoverflow.com/questions/55190295/\n",
+    "# create-a-2-d-mask-from-a-1-d-numpy-array\n",
+    "# This code is complex, so I want to explain what is happening. You\n",
+    "# can also look at the stackoverflow link which provides helpful\n",
+    "# information. \n",
+    "# So, let's start from the inside out. The first command \n",
+    "# is np.less.outer(lifetime, np.arange(100))\n",
+    "# This takes the lifetime array, which is N_SOW in length\n",
+    "# and broadcasts that with outer into a N_SOW*100 shape 2d array\n",
+    "# 100 is the max lifetime we consider since discount rates are\n",
+    "# projected through 2100. We're comparing the values in lifetime\n",
+    "# to the values in the np.arange(100) array. When the lifetime\n",
+    "# value is less the element is assigned False because the value\n",
+    "# in the left series is greater. This creates\n",
+    "# a mask of True/False values which we need to match up to\n",
+    "# our 100x2390000 matrix of eal_avoid values. We are going to create\n",
+    "# a masked array later, and True means do not include\n",
+    "# the value in the calculation. We prepare for this first by\n",
+    "# transposing, then tiling along the columns the same number\n",
+    "# of times as we have structures in our sample. \n",
+    "lifetime_mask = np.tile(np.less.outer(lifetime_temp, np.arange(100)).T,\n",
+    "                        (1, len(ens_df['fd_id'].unique())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "85d2ca71-514e-4b78-b4d7-9d0ddbb3996a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:53.606819Z",
-     "iopub.status.busy": "2024-02-29T23:11:53.606665Z"
+     "iopub.execute_input": "2024-03-12T19:38:09.020208Z",
+     "iopub.status.busy": "2024-03-12T19:38:09.020067Z",
+     "iopub.status.idle": "2024-03-12T19:42:41.456322Z",
+     "shell.execute_reply": "2024-03-12T19:42:41.454542Z",
+     "shell.execute_reply.started": "2024-03-12T19:38:09.020194Z"
     }
    },
    "outputs": [
@@ -378,7 +445,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scenario: Upper\n",
+      "Scenario: Mid\n",
       "DDF: naccs\n",
       "Estimate Losses for Elevated Home, RP: 001\n",
       "Estimate Losses for Elevated Home, RP: 002\n",
@@ -501,44 +568,14 @@
       "Calculations done for heightening by 10 feet\n",
       "\n",
       "Processed rows with optimal elevation height of 5\n",
+      "Processed rows with optimal elevation height of 6\n",
       "Processed rows with optimal elevation height of 3\n",
-      "Processed rows with optimal elevation height of 8\n",
       "Processed rows with optimal elevation height of 7\n",
       "Processed rows with optimal elevation height of 4\n",
-      "Processed rows with optimal elevation height of 6\n",
+      "Processed rows with optimal elevation height of 8\n",
       "Processed rows with optimal elevation height of 10\n",
-      "Processed rows with optimal elevation height of 9\n",
-      "Wrote file: ens_opt_elev_naccs_Upper.pqt\n",
-      "\n",
-      "DDF: hazus\n",
-      "Estimate Losses for Elevated Home, RP: 001\n",
-      "Estimate Losses for Elevated Home, RP: 002\n",
-      "Estimate Losses for Elevated Home, RP: 005\n",
-      "Estimate Losses for Elevated Home, RP: 010\n",
-      "Estimate Losses for Elevated Home, RP: 015\n",
-      "Estimate Losses for Elevated Home, RP: 020\n",
-      "Estimate Losses for Elevated Home, RP: 025\n",
-      "Estimate Losses for Elevated Home, RP: 050\n",
-      "Estimate Losses for Elevated Home, RP: 075\n",
-      "Estimate Losses for Elevated Home, RP: 100\n",
-      "Estimate Losses for Elevated Home, RP: 200\n",
-      "Estimate Losses for Elevated Home, RP: 500\n",
-      "Calculated EAL\n",
-      "Calculations done for heightening by 3 feet\n",
-      "\n",
-      "Estimate Losses for Elevated Home, RP: 001\n",
-      "Estimate Losses for Elevated Home, RP: 002\n",
-      "Estimate Losses for Elevated Home, RP: 005\n",
-      "Estimate Losses for Elevated Home, RP: 010\n",
-      "Estimate Losses for Elevated Home, RP: 015\n",
-      "Estimate Losses for Elevated Home, RP: 020\n",
-      "Estimate Losses for Elevated Home, RP: 025\n",
-      "Estimate Losses for Elevated Home, RP: 050\n",
-      "Estimate Losses for Elevated Home, RP: 075\n",
-      "Estimate Losses for Elevated Home, RP: 100\n",
-      "Estimate Losses for Elevated Home, RP: 200\n",
-      "Estimate Losses for Elevated Home, RP: 500\n",
-      "Calculated EAL\n"
+      "Wrote file: ens_opt_elev_naccs_Mid.pqt\n",
+      "\n"
      ]
     }
    ],
@@ -609,12 +646,15 @@
     "    # and broadcasts that with outer into a N_SOW*100 shape 2d array\n",
     "    # 100 is the max lifetime we consider since discount rates are\n",
     "    # projected through 2100. We're comparing the values in lifetime\n",
-    "    # to the values in the np.arange(100) array, and when the lifetime\n",
-    "    # value is less, the element is assigned True. This creates\n",
+    "    # to the values in the np.arange(100) array. When the lifetime\n",
+    "    # value is less the element is assigned False because the value\n",
+    "    # in the left series is greater. This creates\n",
     "    # a mask of True/False values which we need to match up to\n",
-    "    # our 100x2390000 matrix of eal_avoid values. We do this first by\n",
+    "    # our 100x2390000 matrix of eal_avoid values. We are going to create\n",
+    "    # a masked array later, and True means do not include\n",
+    "    # the value in the calculation. We prepare for this first by\n",
     "    # transposing, then tiling along the columns the same number\n",
-    "    # of times as we have structures in our sample. \n",
+    "    # of times as we have structures in our sample.\n",
     "    lifetime_mask = np.tile(np.less.outer(lifetime, np.arange(100)).T,\n",
     "                            (1, len(ens_df['fd_id'].unique())))\n",
     "\n",
@@ -733,7 +773,7 @@
     "        \n",
     "            # Present value - residual risk (our final_eal column)\n",
     "            eal_resid = np.tile(final_eal, (100, 1))\n",
-    "            # Apply the lifetime_mask to eal_avoid\n",
+    "            # Apply the lifetime_mask to eal_resid\n",
     "            eal_r_life = ma.masked_array(eal_resid,\n",
     "                                         mask=lifetime_mask,\n",
     "                                         fill_value=0)\n",
