correct svi and updated nj ovb + regenerated all results

--- a/workflow/notebooks/results.ipynb
+++ b/workflow/notebooks/results.ipynb
@@ -171,8 +171,9 @@
    "outputs": [],
    "source": [
     "# Subset sovi and lmi based on their threshholds\n",
-    "sovi = sovi[sovi['SOVI0610' + STATEABBR] > .75]\n",
-    "lmi = lmi[lmi['Lowmod_pct'] > .5]"
+    "sovi = sovi[sovi['sovi'] > .6]\n",
+    "lmi = lmi[lmi['Lowmod_pct'] > .5]\n",
+    "ovb = ovb[ovb['ovb_crit'] != 'Adjacent']"
    ]
   },
   {
@@ -260,16 +261,16 @@
     "budget = 3e6\n",
     "\n",
     "sort_cols = ['npv_opt',\n",
-    "             'lmi', \n",
+    "             'sovi', \n",
     "             'avoid_rel_eal',\n",
-    "             'ovb',\n",
+    "             'lmi',\n",
     "             'rel_eal',\n",
     "             'cejst']\n",
     "\n",
     "title_dict = {\n",
     "    'lmi': 'Criterion: Majority of Benefits in\\nLow-Mod Income Block Groups',\n",
     "    'npv_opt': 'Criterion: Highest to Lowest\\nNet Benefit' ,\n",
-    "    'ovb': 'Criterion: Majority of Benefits in\\nNJ Overburdened Communities',\n",
+    "    'sovi': 'Criterion: Majority of Benefits in\\nCDC Socially Vulnerable',\n",
     "    'rel_eal': 'Criterion: Highest to Lowest\\nInitial Risk Burden',\n",
     "    'cejst': 'Criterion: Majority of Benefits in\\nJustice40 Communities',\n",
     "    'avoid_rel_eal': 'Criterion: Highest to Lowest\\nReduction in Risk Burden'\n",
@@ -306,7 +307,7 @@
     "# The costs of meeting objectives\n",
     "\n",
     "color_dict = {\n",
-    "    'ovb': \"#33BBEE\",\n",
+    "    'sovi': \"#33BBEE\",\n",
     "    'lmi': \"#0077BB\",\n",
     "    'cejst': \"#009988\",\n",
     "    'avoid_rel_eal': \"#EE3377\",\n",
@@ -325,6 +326,10 @@
     "\n",
     "min_obj_cols = ['resid_eq', 'pv_resid_plot', avoid_eq_col]\n",
     "\n",
+    "# For plotting purposes, we're not comparing this rule\n",
+    "# for allocation since it hasn't been used this way yet\n",
+    "objs_plot = objs[objs['sort'] != 'ovb']\n",
+    "\n",
     "for scen in scenarios:\n",
     "    for ddf_type in ddf_types:\n",
     "        scenario = scen + '_' + ddf_type\n",
@@ -332,7 +337,7 @@
     "                             scen + '_' + ddf_type + '.png')\n",
     "        prepare_saving(save_filename)\n",
     "\n",
-    "        plot_objcst(objs, obj_cols, obj_names,\n",
+    "        plot_objcst(objs_plot, obj_cols, obj_names,\n",
     "                    scenario, color_dict, min_obj_cols,\n",
     "                    avoid_eq_col,\n",
     "                    save_filename)\n"
