updated the hma data for v3 release

--- a/workflow/notebooks/results.ipynb
+++ b/workflow/notebooks/results.ipynb
@@ -369,9 +369,11 @@
     "# Want to get adjustments for previous elevation projects\n",
     "# Load in fema assistance/grants\n",
     "hma_proj_filep = join(FR, 'pol', 'fema_assistance',\n",
-    "                      'HazardMitigationAssistanceProjects.csv')\n",
+    "                      'HazardMitigationAssistanceProjects.json')\n",
     "\n",
-    "hma_proj = pd.read_csv(hma_proj_filep)\n",
+    "hma_proj = pd.read_json(hma_proj_filep)\n",
+    "hma_proj = pd.json_normalize(hma_proj['HazardMitigationAssistanceProjects'])\n",
+    "\n",
     "\n",
     "# Subset from hma_proj.projecType.unique() for\n",
     "# elevation of private structures\n",
@@ -387,7 +389,8 @@
     "# add a year column\n",
     "# We'll use the dateApproved year for a best guess of \n",
     "# what year the cost estimates reflect\n",
-    "elev_proj['year'] = pd.to_datetime(elev_proj['dateApproved']).dt.year\n",
+    "elev_proj['year'] = pd.to_datetime(elev_proj['dateApproved'],\n",
+    "                                   errors='coerce').dt.year\n",
     "\n",
     "# Today price = historic_price * (2022 index / historic_index) \n",
     "upper_infl_filep = join(ABS_DIR, 'resources',\n",
